fix entry page alignment

--- a/src/modules/_entry.scss
+++ b/src/modules/_entry.scss
@@ -4,20 +4,6 @@
   height: 100vh;
   background-color: rgb(40,50,56);
   z-index: 9000;
-  text-align: center;
-
-  &:before {
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-    content: "";
-  }
-
-  @media screen and (max-width: 400px) {
-    &:before {
-      content: initial;
-    }
-  }
 
   img {
     width: 100%;
@@ -52,11 +38,12 @@
 
   .mg-entryform {
     position: relative;
-    vertical-align: middle;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    margin: 0 auto;
     padding: 30px;
     z-index: 2;
-    display: inline-block;
-    max-width: 100%;
     max-width: 400px;
     transition: transform .25s;
 
@@ -118,3 +105,12 @@
     transition: box-shadow .25s linear, border .25s linear, color .25s linear, background-color .25s linear;
   }
 }
+
+.loaded {
+  transition: transform .5s;
+  transform: translateY(100%);
+  pointer-events: none;
+  opacity: 0;
+}
+  
+
